--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,127 @@
-.box1 {
-    background-color: #ff6a39;
+/* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+} */
+
+/* .box1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ff6a39;
+    text-align: center;
 }
 
 .box2 {
-    background-color: #182227;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #182227;
+    text-align: center;
 }
 
 .box3 {
-    background-color: #4b22f4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #4b22f4;
+    text-align: center;
+} */
+
+h1 {
+    color: #FFFF;
+}
+
+main {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
+    padding: 4rem 10rem 4rem 10rem;  
+    background: #182227;
+}
+
+/* .box1 {
+    grid-row: 1/5;
+}
+
+.box2 {
+    grid-row: 1/3;
+}
+
+.box3 {
+    grid-row: 1/5;
+} */
+
+/* .services {
+    background: #182227;
+} */
+
+.box4 {
+    background: beige;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.box4 h2 {
+    margin-bottom: 1rem;
+}
+
+.box4 p {
+    margin-bottom: 1rem;
+}
+
+.box5 {
+    background: beige;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.box5 h2 {
+    margin-bottom: 1rem;
+}
+
+.box5 p {
+    margin-bottom: 1rem;
+}
+
+.box6 {
+    background: beige;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.box6 h2 {
+    margin-bottom: 1rem;
+}
+
+.box6 p {
+    margin-bottom: 1rem;
+}
+
+.box7 {
+    background: beige;
+    border-radius: 5px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.box7 h2 {
+    margin-bottom: 1rem;
+}
+
+.box7 p {
+    margin-bottom: 1rem;
 }
