--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,18 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
+}
+
+body {
+    background-color:#182227;
+}
+
+@media (max-width: 575px) {
+    body {
+      background-color: yellow;
+    }
+}
 
 /* .box1 {
     display: flex;
@@ -41,7 +51,7 @@ main {
     grid-template: repeat(2, 1fr) / repeat(2, 1fr);
     gap: 2rem;
     padding: 4rem 10rem 4rem 10rem;  
-    background: #182227;
+    /* background: #182227; */
 }
 
 .box4 {
